--- a/AEAssist/MainWindow.xaml
+++ b/AEAssist/MainWindow.xaml
@@ -198,6 +198,19 @@
                         </TabItem.LayoutTransform>
                         <view:Healer HorizontalAlignment="Center" Width="740" />
                     </TabItem>
+
+                    <TabItem Width="50" Height="50">
+                        <TabItem.Header>
+                            <Image Margin="5" Source="Resources/jobs/Tank.png" />
+                        </TabItem.Header>
+                        <TabItem.LayoutTransform>
+                            <TransformGroup>
+                                <RotateTransform Angle="90" />
+                            </TransformGroup>
+                        </TabItem.LayoutTransform>
+                        <view:Tank HorizontalAlignment="Center" Width="740" />
+                    </TabItem>
+
                 </TabControl>
                 
             </Border>
