--- a/AEAssist/View/Overlay/PaladinOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/PaladinOverlayWindow.xaml
@@ -91,6 +91,10 @@
                                   Content="{Binding Language.Toggle_Requiescat}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding Requiescat,Mode=TwoWay}"/>
+                        <CheckBox HorizontalContentAlignment="Center"
+                                  Content="{Binding Language.Toggle_Sheltron}"
+                                  Style="{StaticResource CheckBoxOverlayCustomToggle}"
+                                  IsChecked="{Binding Sheltron,Mode=TwoWay}"/>
 
 
                     </WrapPanel>
