--- a/AEAssist/MainWindow.xaml
+++ b/AEAssist/MainWindow.xaml
@@ -203,22 +203,22 @@
                     <TabItem Width="50" Height="50">
                         <TabItem.Header>
                             <Image Margin="5" Source="Resources/jobs/Tank.png" />
-
-                    <TabItem Width="50" Height="50">
-                        <TabItem.Header>
-                            <Image Margin="5" Source="Resources/jobs/gnb-framed.png" />
-                        </TabItem.Header>
-                        <TabItem.LayoutTransform>
-                            <TransformGroup>
-                                <RotateTransform Angle="90" />
-                            </TransformGroup>
-                        </TabItem.LayoutTransform>
-
-                        <view:Tank HorizontalAlignment="Center" Width="740" />
-                    </TabItem>
-
-
-                        <view:GunBreakerSettingView HorizontalAlignment="Center" />
+                            </TabItem.Header>
+                    <!-- <TabItem Width="50" Height="50"> -->
+                    <!--     <TabItem.Header> -->
+                    <!--         <Image Margin="5" Source="Resources/jobs/gnb-framed.png" /> -->
+                    <!--     </TabItem.Header> -->
+                    <!--     <TabItem.LayoutTransform> -->
+                    <!--         <TransformGroup> -->
+                    <!--             <RotateTransform Angle="90" /> -->
+                    <!--         </TransformGroup> -->
+                    <!--     </TabItem.LayoutTransform> -->
+                    <!-- -->
+                    <!--     <view:Tank HorizontalAlignment="Center" Width="740" /> -->
+                    <!-- </TabItem> -->
+                    <!-- -->
+                    <!-- -->
+                    <!--     <view:GunBreakerSettingView HorizontalAlignment="Center" /> -->
                     </TabItem>
                     
 
