--- a/AEAssist/MainWindow.xaml
+++ b/AEAssist/MainWindow.xaml
@@ -204,24 +204,13 @@
                         <TabItem.Header>
                             <Image Margin="5" Source="Resources/jobs/Tank.png" />
                             </TabItem.Header>
-                    <!-- <TabItem Width="50" Height="50"> -->
-                    <!--     <TabItem.Header> -->
-                    <!--         <Image Margin="5" Source="Resources/jobs/gnb-framed.png" /> -->
-                    <!--     </TabItem.Header> -->
-                    <!--     <TabItem.LayoutTransform> -->
-                    <!--         <TransformGroup> -->
-                    <!--             <RotateTransform Angle="90" /> -->
-                    <!--         </TransformGroup> -->
-                    <!--     </TabItem.LayoutTransform> -->
-                    <!-- -->
-                    <!--     <view:Tank HorizontalAlignment="Center" Width="740" /> -->
-                    <!-- </TabItem> -->
-                    <!-- -->
-                    <!-- -->
-                    <!--     <view:GunBreakerSettingView HorizontalAlignment="Center" /> -->
+                        <TabItem.LayoutTransform>
+                            <TransformGroup>
+                                <RotateTransform Angle="90" />
+                            </TransformGroup>
+                        </TabItem.LayoutTransform>
+                        <view:Tank HorizontalAlignment="Center" />
                     </TabItem>
-                    
-
                 </TabControl>
                 
             </Border>
