--- a/AEAssist/View/Tank.xaml
+++ b/AEAssist/View/Tank.xaml
@@ -24,6 +24,17 @@
                         </TabItem.LayoutTransform>
                         <local:PaladinSettingView HorizontalAlignment="Center" />
                     </TabItem>
+                    <TabItem Width="50" Height="50">
+                        <TabItem.Header>
+                            <Image Margin="5" Source="/AEAssist;component/Resources/jobs/gnb-framed.png" />
+                        </TabItem.Header>
+                        <TabItem.LayoutTransform>
+                            <TransformGroup>
+                                <RotateTransform Angle="90" />
+                            </TransformGroup>
+                        </TabItem.LayoutTransform>
+                        <local:GunBreakerSettingView HorizontalAlignment="Center" />
+                    </TabItem>
                 </TabControl>
             </Border>
         </StackPanel>
