--- a/AEAssist/View/Overlay/SMNOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/SMNOverlayWindow.xaml
@@ -70,13 +70,13 @@
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding FinalBurst, Mode=TwoWay}"
                                   ToolTip="{Binding Language.ToolTip_SMN_FinalBurst}"/>
-                        <CheckBox HorizontalContentAlignment="Center"
-                                  Content="{Binding Language.Toggle_SMN_SaveInstantSpells}"
+                        <CheckBox  Width="100" HorizontalContentAlignment="Center"
+                                  Content="{Binding Language.Toggle_SaveInstantSpells}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding SaveInstantSpells, Mode=TwoWay}"
-                                  ToolTip="{Binding Language.ToolTip_SMN_SaveInstantSpells}"/>
+                                  ToolTip="{Binding Language.ToolTip_SaveInstantSpells}"/>
                         <CheckBox HorizontalContentAlignment="Center"
-                                  Content="{Binding Language.Toggle_SMN_Crimson}"
+                                  Content="{Binding Language.Toggle_CrimsonCyclone}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding Crimson, Mode=TwoWay}"/>
                     </WrapPanel>
