--- a/AEAssist/View/GeneralSettingView.xaml
+++ b/AEAssist/View/GeneralSettingView.xaml
@@ -25,8 +25,7 @@
 
     <TabControl
         TabStripPlacement="Top"
-        Margin="20"
-        Width="500">
+        Margin="20">
         <TabItem Header="Lan">
             <StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="10">
