--- a/AEAssist/View/Overlay/AstOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/AstOverlayWindow.xaml
@@ -89,6 +89,15 @@
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding Burst,Mode=TwoWay}"
                                   ToolTip="{Binding Language.ToolTip_Ast_Burst}"/>
+                        <CheckBox HorizontalContentAlignment="Center"
+                                  Content="{Binding Language.Toggle_Divination}"
+                                  Style="{StaticResource CheckBoxOverlayCustomToggle}"
+                                  IsChecked="{Binding AstSettings.DivinationToggle,Mode=TwoWay}" />
+                        <CheckBox HorizontalContentAlignment="Center"
+                                  Content="{Binding Language.Toggle_LightSpeed}"
+                                  Style="{StaticResource CheckBoxOverlayCustomToggle}"
+                                  IsChecked="{Binding AstSettings.LighSpeedToggle,Mode=TwoWay}" />
+                        
                     </WrapPanel>
                     <WrapPanel Margin="10">
                         <Button Style="{StaticResource ImageButton}"
