--- a/AEAssist/View/Overlay/DancerOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/DancerOverlayWindow.xaml
@@ -64,6 +64,11 @@
                                   IsChecked="{Binding UseFlourish,Mode=TwoWay}" />
                         
                         <CheckBox HorizontalContentAlignment="Center"
+                                  Content="Saber Dance"
+                                  Style="{StaticResource CheckBoxOverlayCustomToggle}"
+                                  IsChecked="{Binding UseSaberDance,Mode=TwoWay}" />
+                        
+                        <CheckBox HorizontalContentAlignment="Center"
                                   Content="{Binding Language.Toggle_Potion}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding GeneralSettings.UsePotion,Mode=TwoWay}" />
