--- a/AEAssist/View/Overlay/DancerOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/DancerOverlayWindow.xaml
@@ -59,12 +59,12 @@
                                   IsChecked="{Binding UseAOE,Mode=TwoWay}" />
                         
                         <CheckBox HorizontalContentAlignment="Center"
-                                  Content="Flourish"
+                                  Content="{Binding Language.Toggle_Flourish}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding UseFlourish,Mode=TwoWay}" />
                         
                         <CheckBox HorizontalContentAlignment="Center"
-                                  Content="Saber Dance"
+                                  Content="{Binding Language.Toggle_SaberDance}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding UseSaberDance,Mode=TwoWay}" />
                         
