--- a/AEAssist/View/GunBreakerSettingView.xaml
+++ b/AEAssist/View/GunBreakerSettingView.xaml
@@ -6,7 +6,7 @@
              xmlns:viewModels="clr-namespace:AEAssist"
              xmlns:dataBinding="clr-namespace:AEAssist"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="450">
+             d:DesignHeight="377.215" d:DesignWidth="448.734">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -26,7 +26,7 @@
         TabStripPlacement="Top">
 
         <TabItem Header="{Binding Language.TabItem_BaseSetting}">
-            <StackPanel HorizontalAlignment="Left" Margin="10,0,0,0" Height="211" Width="398">
+            <StackPanel HorizontalAlignment="Left" Margin="10,0,0,0" Height="271" Width="398">
                 <CheckBox Name="EarlyDecisionMode"
                           Content="{Binding Language.Toggle_EarlyDecisionMode}" Width="200" Height="25"
                           HorizontalAlignment="Left"
@@ -41,6 +41,14 @@
                         <Label Content="Default 2.5,Best set between 2.0 to 3.0  "  />
                         <TextBox Width="100" Text="{Binding GunBreakerSettings.NotUseRoughDivide, Mode=TwoWay}" />
                     </StackPanel>
+                </StackPanel>
+                <StackPanel HorizontalAlignment="Left" Margin="4">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="5">
+                        <Label Content="{Binding Language.Label_ChooseOpener}" Width="100" />
+                        <ComboBox IsEditable="False" Name="ChooseOpener" Width="150" DisplayMemberPath="Name"
+                              SelectedValuePath="Name" SelectionChanged="ChooseOpener_OnSelectionChanged" />
+                    </StackPanel>
+                    <Label Content="" Width="100" />
                 </StackPanel>
             </StackPanel>
         </TabItem>
