--- a/AEAssist/View/Ranged.xaml
+++ b/AEAssist/View/Ranged.xaml
@@ -61,6 +61,17 @@
                         </TabItem.LayoutTransform>
                         <local:SMNSettingView HorizontalAlignment="Center" />
                     </TabItem>
+                    <TabItem Width="50" Height="50">
+                        <TabItem.Header>
+                            <Image Margin="5" Source="/AEAssist;component/Resources/jobs/rdm-framed.png" />
+                        </TabItem.Header>
+                        <TabItem.LayoutTransform>
+                            <TransformGroup>
+                                <RotateTransform Angle="90" />
+                            </TransformGroup>
+                        </TabItem.LayoutTransform>
+                        <local:WarriorSettingView HorizontalAlignment="Center" />
+                    </TabItem>
                 </TabControl>
             </Border>
         </StackPanel>
