--- a/AEAssist/View/Overlay/GunBreakerOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/GunBreakerOverlayWindow.xaml
@@ -18,6 +18,80 @@
             </ResourceDictionary.MergedDictionaries>
 
             <BooleanToVisibilityConverter x:Key="BoolToVis" />
+            
+            <view:RangeToBooleanConverter x:Key="conv" />
+            <SolidColorBrush x:Key="ProgressBar.Progress" Color="#FF06B025"/>
+            <SolidColorBrush x:Key="ProgressBar.Background" Color="#FFE6E6E6"/>
+            <SolidColorBrush x:Key="ProgressBar.Border" Color="#FFBCBCBC"/>
+            <Style x:Key="ProgressBarStyle1" TargetType="{x:Type ProgressBar}">
+                <Setter Property="Foreground" Value="{StaticResource ProgressBar.Progress}"/>
+                <Setter Property="Background" Value="{StaticResource ProgressBar.Background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource ProgressBar.Border}"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type ProgressBar}">
+                            <Grid x:Name="TemplateRoot">
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Determinate"/>
+                                        <VisualState x:Name="Indeterminate">
+                                            <Storyboard RepeatBehavior="Forever">
+                                                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="Animation" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)">
+                                                    <EasingDoubleKeyFrame KeyTime="0" Value="0.25"/>
+                                                    <EasingDoubleKeyFrame KeyTime="0:0:1" Value="0.25"/>
+                                                    <EasingDoubleKeyFrame KeyTime="0:0:2" Value="0.25"/>
+                                                </DoubleAnimationUsingKeyFrames>
+                                                <PointAnimationUsingKeyFrames Storyboard.TargetName="Animation" Storyboard.TargetProperty="(UIElement.RenderTransformOrigin)">
+                                                    <EasingPointKeyFrame KeyTime="0" Value="-0.5,0.5"/>
+                                                    <EasingPointKeyFrame KeyTime="0:0:1" Value="0.5,0.5"/>
+                                                    <EasingPointKeyFrame KeyTime="0:0:2" Value="1.5,0.5"/>
+                                                </PointAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                                <Border Background="Green" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                                    <Grid>
+                                        <Rectangle Fill="Green" HorizontalAlignment="Left"/>
+                                        <Rectangle Fill="Yellow" Width="50" HorizontalAlignment="Right"/>
+                                    </Grid>
+                                </Border>
+                                <Rectangle x:Name="PART_Track"/>
+                                <Grid x:Name="PART_Indicator" ClipToBounds="true" HorizontalAlignment="Left">
+                                    <Rectangle x:Name="Indicator" Fill="Green"/>
+                                    <Rectangle x:Name="Animation" Fill="Yellow" RenderTransformOrigin="0.5,0.5">
+                                        <Rectangle.RenderTransform>
+                                            <TransformGroup>
+                                                <ScaleTransform/>
+                                                <SkewTransform/>
+                                                <RotateTransform/>
+                                                <TranslateTransform/>
+                                            </TransformGroup>
+                                        </Rectangle.RenderTransform>
+                                    </Rectangle>
+                                </Grid>
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="Orientation" Value="Vertical">
+                                    <Setter Property="LayoutTransform" TargetName="TemplateRoot">
+                                        <Setter.Value>
+                                            <RotateTransform Angle="-90"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                                <Trigger Property="IsIndeterminate" Value="true">
+                                    <Setter Property="Visibility" TargetName="Indicator" Value="Collapsed"/>
+                                </Trigger>
+                                <DataTrigger  Binding="{Binding Path=Value, RelativeSource={RelativeSource Self},Converter={StaticResource conv}}" 
+                                              Value="True">
+                                    <Setter Property="Fill" TargetName="Indicator" Value="red" />
+                                </DataTrigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
     <UserControl.RenderTransform>
@@ -35,12 +109,18 @@
                 <SolidColorBrush Color="#101011" Opacity="0.6" />
             </Border.Background>
             <StackPanel>
-                <ProgressBar x:Name = "MeleeDistance" Value = "{Binding MeleePosition.TargetDistance}" Margin = "5" Maximum = "300"
+                <Grid>
+                    <ProgressBar Style="{DynamicResource ProgressBarStyle1}" x:Name = "MeleeDistance" Value = "{Binding MeleePosition.TargetDistance}" Margin = "5" Maximum = "400"
                          Height = "30" IsIndeterminate = "False" 
                          BorderThickness="3"
-                         Foreground="{Binding MeleePosition.IsTargetDistanceSafe}"
-                         Width = "220"/>
-                
+                         Width = "220">
+                    </ProgressBar>
+                    <TextBlock Text="{Binding GNBdisg,Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Center" >
+                        <TextBlock.Background>
+                            <SolidColorBrush Color="#FFF3E7E7" Opacity="0"/>
+                        </TextBlock.Background>
+                    </TextBlock>
+                </Grid>
                 <WrapPanel Width="250" Orientation="Horizontal" HorizontalAlignment="Center"
                            VerticalAlignment="Top">
                     <WrapPanel>
@@ -68,12 +148,12 @@
                                   Content="{Binding Language.Toggle_ActiveAttack}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding Pull,Mode=TwoWay}" />
-                        
+
                         <CheckBox HorizontalContentAlignment="Center"
                                   Content="{Binding Language.Toggle_GNB_Open}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding GNBOpen,Mode=TwoWay}" />
-                        
+
                         <CheckBox HorizontalContentAlignment="Center"
                                   Content="{Binding Language.Toggle_GNB_RoughDivide}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
@@ -91,12 +171,12 @@
 
                             <Image Source="../../Resources/Spells/Sprint.png" Stretch="Uniform" />
                         </Button>
-                        
+
                         <Button Style="{StaticResource ImageButton}"
                                 Width="30" Height="30" Margin="5,2,5,2" Name="UsePotion" Click="UsePotion_OnClick">
                             <Image Source="../../Resources/Spells/Potion.png" Stretch="Uniform" />
                         </Button>
-                        
+
                         <Button Style="{StaticResource ImageButton}"
                                 Width="30" Height="30" Margin="5,2,5,2" Name="UseRampart" Click="UseRampart_OnClick">
                             <Image Source="../../Resources/Spells/TankRoleActions/Rampart.png" Stretch="Uniform" />
@@ -106,7 +186,7 @@
                                 Width="30" Height="30" Margin="5,2,5,2" Name="UseReprisal" Click="UseReprisal_OnClick">
                             <Image Source="../../Resources/Spells/TankRoleActions/Reprisal.png" Stretch="Uniform" />
                         </Button>
-                        
+
                         <Button Style="{StaticResource ImageButton}"
                                 Width="30" Height="30" Margin="5,2,5,2" Name="UseSuperbolide" Click="UseSuperbolide_OnClick">
                             <Image Source="../../Resources/Spells/GunBreaker/Superbolide.png" Stretch="Uniform" />
