--- a/AEAssist/View/Overlay/AstOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/AstOverlayWindow.xaml
@@ -88,6 +88,14 @@
                                   Content="{Binding Language.Lightspeed}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
                                   IsChecked="{Binding AstSettings.lightspeed,Mode=TwoWay}" />
+                        <CheckBox HorizontalContentAlignment="Center"
+                                  Content="{Binding Language.GcdHeal}"
+                                  Style="{StaticResource CheckBoxOverlayCustomToggle}"
+                                  IsChecked="{Binding AstSettings.GcdHeal,Mode=TwoWay}" />
+                        <CheckBox HorizontalContentAlignment="Center"
+                                  Content="{Binding Language.Toggle_FinalBurst}"
+                                  Style="{StaticResource CheckBoxOverlayCustomToggle}"
+                                  IsChecked="{Binding FinalBurst,Mode=TwoWay}" />
                     </WrapPanel>
                     <WrapPanel Margin="10">
                         <Button Style="{StaticResource ImageButton}"
