--- a/AEAssist/View/Overlay/AstOverlayWindow.xaml
+++ b/AEAssist/View/Overlay/AstOverlayWindow.xaml
@@ -63,9 +63,9 @@
                                   IsChecked="{Binding UseDot,Mode=TwoWay}" />
 
                         <CheckBox HorizontalContentAlignment="Center"
-                                  Content="{Binding Language.Toggle_ActiveAttack}"
+                                  Content="{Binding HotkeySetting.CloseBuffBtnName}"
                                   Style="{StaticResource CheckBoxOverlayCustomToggle}"
-                                  IsChecked="{Binding Pull,Mode=TwoWay}" />
+                                  IsChecked="{Binding Burst,Mode=TwoWay}" />
 
                         <CheckBox HorizontalContentAlignment="Center"
                                   Content="{Binding Language.Toggle_LucidDreaming}"
